process/testing/winfv/infra/client.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: client
  name: client
  namespace: demo
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep 360000
    image: busybox
    imagePullPolicy: Always
    name: client
  nodeSelector:
    beta.kubernetes.io/os: linux

---

apiVersion: v1
kind: Pod
metadata:
  labels:
    app: client-b
  name: client-b
  namespace: demo
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep 360000
    image: busybox
    imagePullPolicy: Always
    name: client-b
  nodeSelector:
    beta.kubernetes.io/os: linux
